feat: criado esqueleto do menu

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <nav>
+    <div class="nav-left">
+        Bon Jovi
+    </div>
+    <div class="nav-right">
+        <div class="nav-button-select">
+        </div>
+        <div class="nav-button-container">
+            <button class="nav-button">
+                Account
+            </button>
+            <button class="nav-button">
+                Shop
+            </button>
+            <button class="nav-button">
+                News
+            </button>
+            <button class="nav-button">
+                The JBJ Experience
+            </button>
+            <button class="nav-button">
+                bon jovi radio
+            </button>
+        </div>
+    </div>
+   </nav> 
 </body>
 </html>
