adding body content to the page

--- a/index.html
+++ b/index.html
@@ -33,5 +33,33 @@
         </div>
     </div>
    </nav> 
+   <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <section style="text-align: center; font-family: Georgia, 'Times New Roman', Times, serif;">
+        <h1 style="margin-top: 50px; margin-bottom: 30px;">Bon Jovi - Slippery When Wet (1986)</h1>
+        <img style="width: 300px; align-self: center;" src="https://m.media-amazon.com/images/I/81ad2dh-1+L._AC_SL1000_.jpg" alt="Album Cover">
+        <h2>Songs</h2>
+        <ul style="list-style: none;">
+            <li>Let it Rock</li>
+            <li>You Give Love a Bad Name</li>
+            <li>Livin' On A Prayer</li>
+            <li>Social Disease</li>
+            <li>Wanted Dead Or Alive</li>
+            <li>Raise Your Hands</li>
+            <li>Without Love</li>
+            <li>I'd Die For You</li>
+            <li>Never Say Goodbye</li>
+            <li>Wild In The Streets</li>
+        </ul>
+    </section>
+</body>
+</html>
 </body>
 </html>
