style: estilizanda a barra de menu

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,30 +9,16 @@
 </head>
 <body>
    <nav>
-    <div class="nav-left">
-        Bon Jovi
+    <div class="nav-upper">
+        <div class="details">
+            Menu
+        </div>
+        <image src="logo-bon-jovi.png"></image>
     </div>
-    <div class="nav-right">
-        <div class="nav-button-select">
-        </div>
-        <div class="nav-button-container">
-            <button class="nav-button">
-                Account
-            </button>
-            <button class="nav-button">
-                Shop
-            </button>
-            <button class="nav-button">
-                News
-            </button>
-            <button class="nav-button">
-                The JBJ Experience
-            </button>
-            <button class="nav-button">
-                bon jovi radio
-            </button>
-        </div>
+    <div class="nav-botton">
     </div>
    </nav> 
+   <div class="nav-botton">
+</div>
 </body>
 </html>
